# F407_SE050

./: .gitignore  CMakeLists.txt  README.md  fetch_libraries.sh  generate_f407_se050_demo.sh
Core/: main.c  mbedtls_user_conf.h  se05x_init.c  se05x_init.h  tls_client.c  tls_client.h
board/: board.h  board_I2C.c  board_log.c  board_log.h
f407_se050_mbedtls_demo/: CMakeLists.txt  README.md
f407_se050_mbedtls_demo/include/: board.h  se050_config.h  se050_sss.h  tls_app.h
f407_se050_mbedtls_demo/scripts/: flash.sh
f407_se050_mbedtls_demo/src/: i2c_hal.c  main.c  se050_sss.c  tls_app.c
